# exqudens-cpp-cmake

./: CMakeLists.txt
src/main/cpp/exqudens/: assertions.hpp  logger.hpp  strings.hpp  tests.hpp
src/main/cpp/exqudens/cpp/cmake/test/strings/: main.cpp
src/main/cpp/exqudens/cpp/cmake/util/: Strings.cpp
src/main/cpp/exqudens/test/: test.hpp  tests.cpp  tests.hpp
src/main/cpp/other/: my_macro.hpp  tests.hpp
src/test/cpp/: assertions.hpp  old_main.cpp  run_all_tests.cpp  run_tests.cpp  test_1.hpp  test_2.hpp  tests.cpp  tests.hpp
src/test/cpp/exqudens/: run_tests.cpp  test_strings.hpp
src/test/cpp/exqudens/assertions/: test_assertions.hpp
src/test/cpp/exqudens/cpp/cmake/util/: main.cpp
src/test/cpp/exqudens/logger/: test_logger.hpp
src/test/cpp/exqudens/strings/: test_strings.hpp
src/test/cpp/exqudens/test/: test_test.cpp
src/test/cpp/exqudens/tests/: test_implementation_tests.hpp  test_tests.cpp
src/test/cpp/other/: test_my_macro.cpp  test_tests.cpp
